--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,19 +12,18 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" /> <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
         <activity
-            android:name=".activities.MainActivity"
-            android:label="@string/app_name"
-            android:windowSoftInputMode="adjustResize|stateHidden"
-            android:screenOrientation="portrait">
+            android:name=".activities.MainActivityNav"
+            android:label="@string/title_activity_main_activity_nav" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -32,25 +31,31 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".activities.Login"
-            android:label="login"
-            android:windowSoftInputMode="adjustResize|stateHidden"
-            android:screenOrientation="portrait">
+        <activity
+            android:name=".activities.MainActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize|stateHidden" >
+
         </activity>
-
+        <activity
+            android:name=".activities.Login"
+            android:label="login"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize|stateHidden" >
+        </activity>
         <activity android:name="com.mojio.mojiosdk.networking.OAuthLoginActivity" />
-
 
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyDyyTdjzRJ6JYlwejanDjSrw2z2A-t-bro"/>
+            android:value="AIzaSyDyyTdjzRJ6JYlwejanDjSrw2z2A-t-bro" />
 
         <uses-library android:name="com.google.android.maps" />
 
-     </application>
+
+    </application>
 
 </manifest>
